feat(albums): implement feature album - add docs for albums
