# Golang/gin-songs-api/docs/swagger.yaml
@@ -1,5 +1,47 @@
 basePath: /api/v1
 definitions:
+  api.Album:
+    properties:
+      artist:
+        $ref: '#/definitions/api.Artist'
+      created_at:
+        example: "2021-08-01T00:00:00Z"
+        type: string
+      genre:
+        example: Pop
+        type: string
+      id:
+        example: f4ff0500-7dcd-4f28-9e3e-77859a02977
+        type: string
+      release_date:
+        example: "2021-08-01T00:00:00Z"
+        type: string
+      title:
+        example: Album Title
+        type: string
+      updated_at:
+        example: "2021-08-01T00:00:00Z"
+        type: string
+    type: object
+  api.AlbumReq:
+    properties:
+      artist_id:
+        example: f4ff0500-7dcd-4f28-9e3e-77859a02977
+        type: string
+      genre:
+        example: Pop
+        type: string
+      release_date:
+        example: "2021-08-01T00:00:00Z"
+        type: string
+      title:
+        example: Album Title
+        type: string
+    required:
+    - artist_id
+    - genre
+    - title
+    type: object
   api.Artist:
     properties:
       bio:
@@ -53,6 +95,208 @@ info:
   title: Songs API
   version: "1"
 paths:
+  /albums:
+    get:
+      consumes:
+      - application/json
+      description: Get all albums
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.SuccessResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/api.Album'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.ErrorResponse'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Get all albums
+      tags:
+      - albums
+    post:
+      consumes:
+      - application/json
+      description: Create a new album
+      parameters:
+      - description: Album request
+        in: body
+        name: album
+        required: true
+        schema:
+          $ref: '#/definitions/api.AlbumReq'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/api.Album'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.ErrorResponse'
+            - properties:
+                error:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.ErrorResponse'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Create a new album
+      tags:
+      - albums
+  /albums/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete an album by ID
+      parameters:
+      - description: Album ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.SuccessResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.ErrorResponse'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Delete an album by ID
+      tags:
+      - albums
+    get:
+      consumes:
+      - application/json
+      description: Get an album by ID
+      parameters:
+      - description: Album ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/api.Album'
+              type: object
+        "404":
+          description: Not Found
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.ErrorResponse'
+            - properties:
+                error:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.ErrorResponse'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Get an album by ID
+      tags:
+      - albums
+    put:
+      consumes:
+      - application/json
+      description: Update an album
+      parameters:
+      - description: Album ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Album request
+        in: body
+        name: album
+        required: true
+        schema:
+          $ref: '#/definitions/api.AlbumReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/api.Album'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.ErrorResponse'
+            - properties:
+                error:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.ErrorResponse'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Update an album
+      tags:
+      - albums
   /artists:
     get:
       consumes:
