# Golang/gin-songs-api/models/api/artist.go
@@ -6,8 +6,8 @@ type Artist struct {
 	ID        string    `json:"id" example:"f4ff0500-7dcd-4f28-9e3e-77859a02977"`
 	Name      string    `json:"name" example:"John Doe"`
 	Bio       string    `json:"bio" example:"Lorem ipsum dolor sit amet"`
-	CreatedAt time.Time `json:"created_at" example:"2021-08-01T00:00:00Z"`
-	UpdatedAt time.Time `json:"updated_at" example:"2021-08-01T00:00:00Z"`
+	CreatedAt time.Time `json:"created_at" example:"2024-07-18T16:19:49.703231Z"`
+	UpdatedAt time.Time `json:"updated_at" example:"2024-07-18T16:19:49.703231Z"`
 }
 
 type ArtistReq struct {
